--- a/Day04/test/index.html
+++ b/Day04/test/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="index.css" />
-    <script src="index.js" defer></script>
+    <script type="module" src="index.js" defer></script>
   </head>
   <body>
     <section>
