--- a/Day05/copypf/index.html
+++ b/Day05/copypf/index.html
@@ -21,7 +21,11 @@
       src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
       defer
     ></script>
-    <script src="js/script.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <script src="js/load.js" defer></script>
+    <script src="js/nav.js" defer></script>
+    <script src="js/gallery.js" defer></script>
+
     <!-- <link rel="icon" href="images/favicon.svg" type="image/svg+xml" /> -->
   </head>
   <body>
@@ -32,7 +36,7 @@
 
     <!-- 내비게이션 메뉴 -->
     <nav>
-      <button id="menu-open" class="btn-menu">
+      <button id="menu_open" class="btn-menu">
         <svg
           height="24"
           viewBox="0 0 24 24"
@@ -48,7 +52,7 @@
         </svg>
       </button>
       <div id="menu-panel">
-        <button id="menu-close" class="btn-menu">
+        <button id="menu_close" class="btn-menu">
           <svg
             height="24"
             viewBox="0 0 24 24"
@@ -63,12 +67,13 @@
             />
           </svg>
         </button>
+        <!-- navwrap ul, li 자주씀 -->
         <ul class="menu-list">
-          <li><a href="#">Online Shop</a></li>
-          <li><a href="#">Ticketing</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">YouTube</a></li>
-          <li><a href="mailto:hello@example.com">Contact</a></li>
+          <li><a href="">Online Shop</a></li>
+          <li><a href="">Ticketing</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">YouTube</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -88,7 +93,7 @@
       <div class="title_infotext">
         <h1></h1>
         <h1></h1>
-        <h1>글씨존나 안어울ㄹ미</h1>
+        <h1></h1>
       </div>
     </section>
 
