--- a/pf/copypf/index.html
+++ b/pf/copypf/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
