--- a/Day10/MINIGAMEPF/index.html
+++ b/Day10/MINIGAMEPF/index.html
@@ -6,7 +6,7 @@
     <title>타자연습게임</title>
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="index.css" />
-    <script src="index2.js" defer></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
 
